# CUDA-MatMul-Practice

./: .gitignore  CMakeLists.txt  README.md  demo.cc  matmul.cu
matmul/: naive.cu  parser.h
src/: 1_naive.cuh  2_global_memory_coalescing.cuh  2_shared_memeory.cuh  3_shared_memeory.cuh  4_blocktiling_1D.cuh  parser.h  utils.cuh
src/matmul/: CMakeLists.txt  _1_naive.cu  _2_tiling.cu  _3_coalescing.cu  _4_unroll.cu  _5_comopt.cu  coalescing.cu  comopt.cu  naive.cu  parser.h  tiling.cu  unroll.cu
src/reduction/: CMakeLists.txt  _1_interadd_div.cu  _2_interadd_bank.cu  _3_seqadd_naive.cu  _4_seqadd_halve.cu  _5_seqadd_unroll.cu  _6_complete_unroll.cu  _7_multiple_thread.cu  _8_total_sum.cu  _9_points_mean.cu
test/: CMakeLists.txt  matrix_mult_test.cc  reduction_test.cc
test/data/: points.txt
